--- a/notes/adjectives/compiling-kernel-models.qmd
+++ b/notes/adjectives/compiling-kernel-models.qmd
@@ -48,3 +48,5 @@ Before diving into the implementation details, it's important to understand what
 This distinction is crucial: PDS automates the translation from compositional semantics to the core statistical model, while leaving room for analysts to add domain-specific statistical structure. As we'll see, this separation allows us to maintain theoretical clarity while building models sophisticated enough to handle real experimental data.
 
 We'll be showing prettified versions of what the system actually outputs. For every model block, we'll also provide the current system output in a footnote.
+
+With this understanding of kernel models and Stan's role, we can now examine specific implementations. We'll start with the simplest case—inferring degrees from norming data—before building up to more complex models of vagueness.
